# WechatAgent

./: .env.example  .gitignore  pyproject.toml  readme.md  requirements.txt  test_run.py
.superpowers/sdd/: cli-final-fix-report.md  cli-task-1-report.md  cli-task-2-report.md  cli-task-3-report.md  final-fix-report.md  task-1-report.md  task-2-report.md  task-3-report.md  task-5-report.md  task-6-report.md  task-7-report.md  task-8-report.md  task-9-report.md
docs/superpowers/plans/: 2026-07-01-personal-life-agent-implementation-plan.md
docs/superpowers/specs/: 2026-07-01-personal-life-agent-design.md  2026-07-02-cli-chat-and-scheduler-simulator-design.md
src/wechat_agent/: config.py
src/wechat_agent/agent/: orchestrator.py
src/wechat_agent/channels/: base.py  test_channel.py
src/wechat_agent/cli/: app.py  commands.py  session.py
src/wechat_agent/domain/: events.py  memory.py  messages.py  modes.py  tasks.py
src/wechat_agent/llm/: fake_gateway.py  gateway.py  minimax_gateway.py
src/wechat_agent/memory/: service.py
tests/: __init__.py
tests/agent/: test_orchestrator.py
tests/channels/: test_test_channel.py
tests/cli/: conftest.py  test_app.py  test_commands.py  test_session.py  test_test_run.py
tests/config/: test_settings.py
tests/domain/: test_life_domain.py  test_messages.py
tests/e2e/: test_personal_life_agent_flow.py
tests/llm/: test_fake_gateway.py  test_minimax_gateway.py
tests/memory/: test_service.py
tests/policy/: test_engine.py
tests/scheduler/: test_service.py
tests/storage/: test_in_memory.py  test_postgres.py
(+9 files in other folders)
